--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header h1 {
 nav ul {
     padding: 0;
     list-style-type: none;
+    text-align: center;
 }
 
 nav ul li {
@@ -37,10 +38,6 @@ nav ul li a:hover {
     color: white;
 }
 
-section {
-    padding: 20px;
-}
-
 footer {
     background-color: #f4f4f4;
     padding: 10px;
@@ -53,64 +50,33 @@ img {
 }
 
 main {
-    display: flex;           /* Enables flexbox */
-    justify-content: space-between; /* Puts space between the two divs */
-    align-items: flex-start; /* Aligns the items to the top */
-    gap: 20px;               /* Space between the two divs */
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 20px;
 }
 
-/* Style for the left side */
 .left-side {
-    flex: 1;                 /* Takes up 1 fraction of available space */
-    max-width: 40%;          /* Limits width to 40% of the main content area */
+    flex: 1;
+    max-width: 20%;
+}
+
+.right-side {
+    flex: 2;
+    max-width: 80%;
 }
 
 .profile-pic {
-    width: 150px; /* or whatever size you prefer */
-    height: auto; /* maintain aspect ratio */
-    border-radius: 50%; /* to keep it circular */
+    margin: 0 auto 20px auto;
+    width: 150px;
+    border-radius: 50%;
 }
-
-/* Style for the right side */
-.right-side {
-    flex: 2;                 /* Takes up 2 fractions of available space, making it larger */
-    max-width: 60%;          /* Limits width to 60% of the main content area */
-}
-.fab.fa-linkedin {
-    color: #0077B5;
-}
-
-.fa.fa-envelope {
-    color: #4CAF50;
-}
-
 
 a {
-    text-decoration: none; /* Removes the underline */
+    text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline; /* Ensures the underline doesn't appear on hover either */
-}
-
-.profile-pic {
-    margin: 0 auto 20px auto; /* auto will center the image if the parent is a block */
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
-}
-.about-content { /* assuming you have a container div for the 'About me' section */
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.profile-container { /* assuming you have a parent container for your entire profile */
-    display: flex;
-    justify-content: center; /* centers items horizontally */
-    align-items: center; /* centers items vertically */
-    flex-direction: column; /* stack items vertically */
-}
-
-.main-content {
-    padding: 0 20px; /* 0 top and bottom, 20px left and right */
+    text-decoration: underline;
 }
